--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -52,7 +52,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--global site settings-->
     <add key="SiteName" value="**defaultSiteName**" />
-    <add key="DisabledAreas" value="" />
+    <add key="DisabledAreas" value="PlcSupervisie" />
     <add key="DatabufferNumShifts" value="9" />
     <add key="DatabufferNumDefaultHours" value="48" />
     <!--hangfire-->
