--- a/EQUICommunictionLib/App.config
+++ b/EQUICommunictionLib/App.config
@@ -12,6 +12,7 @@
         type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
     </DbProviderFactories>
   </system.data>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -21,8 +22,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <oracle.manageddataaccess.client>
     <version number="*">
+      <!--Fix for command timeout not working https://stackoverflow.com/questions/41356038/oracle-net-provider-commandtimeout-not-worked -->
+      <settings>
+        <setting name="Disable_Oob" value="on" />
+      </settings>
       <dataSources>
         <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
       </dataSources>
