--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -666,6 +666,7 @@
     <Compile Include="Areas\Welding\Controllers\TeardownTeam.cs" />
     <Compile Include="Areas\Welding\Controllers\ToDoListsController.cs" />
     <Compile Include="Areas\Welding\Controllers\ToDoList_RemarkController.cs" />
+    <Compile Include="Areas\Welding\Controllers\UltralogController.cs" />
     <Compile Include="Areas\Welding\Controllers\UpdateController.cs" />
     <Compile Include="Areas\Welding\Controllers\WMController.cs" />
     <Compile Include="Areas\Welding\editController.cs" />
@@ -819,6 +820,7 @@
     <Compile Include="Areas\Welding\Models\ULRapportering.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Welding\Models\UltralogData.cs" />
     <Compile Include="Areas\Welding\Models\WeldfaultCount.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -1033,6 +1035,7 @@
     <Content Include="Content\CustomStyleTweeks.css" />
     <Content Include="Content\daterangepicker.css" />
     <Content Include="Content\fontawesome-all.css" />
+    <Content Include="Content\images\Pic2225.png" />
     <Content Include="Content\images\volvo-50.png" />
     <Content Include="Content\jquery-cron.css" />
     <Content Include="Content\jquery-ui.css" />
@@ -1942,6 +1945,7 @@
     <Content Include="Areas\Welding\Views\Spatter\Index.cshtml" />
     <Content Include="Areas\Welding\Views\Spatter\_SpikesV316.cshtml" />
     <Content Include="Areas\CycleTime\Views\CycleTimeUi\Index.cshtml" />
+    <Content Include="Areas\Welding\Views\Ultralog\GetControlPlanPicture.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-DEV-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
