update grid fault handlers

--- a/EqUiWebUi/Web.DEV_GA.config
+++ b/EqUiWebUi/Web.DEV_GA.config
@@ -19,7 +19,7 @@
     <add key ="HangfireDetailsBasepath" value="http://gensvw1178.gen.volvocars.net:666/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--Maximo-->
     <add key ="Maximo_ORGID" value="VCCBE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="Maximo_SiteID" value="VCG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="Maximo_SiteID" value="VCGXXX" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="Maximo_LOCATION_SYSTEMID" value="PRODMID" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="Maximo_ORG_SYSTEMID" value="ORG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="Maximo_TOPANCESTOR" value="A" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
